objects/Group_Donor__c.object
<CustomObject><fields>
        <fullName>Billing_Number__c</fullName>
        <description>Credit card number, Paypal number, checking account number</description>
        <inlineHelpText>Credit card number, Paypal number, checking account number</inlineHelpText>
        <label>Billing Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields><fields>
        <fullName>Billing_Type__c</fullName>
        <description>Billing Number</description>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Checking Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paypal</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Org_Email__c</fullName>
        <label>Org Email</label>
        <required>true</required>
        <type>Email</type>
    </fields><fields>
        <fullName>Org_Phone__c</fullName>
        <label>Org Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Org_Website__c</fullName>
        <label>Org Website</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Group Donor</label><nameField>
        <label>Group Donor Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Group Donors</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>